--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
   "name": "@ilb/node_context",
-  "version": "1.0.36",
+  "version": "1.1.0",
   "description": "",
-  "author": "github@bystrobank.ru",
+  "author": "github@iconicompany.com",
   "license": "ISC",
-  "type": "module",
   "main": "src/ContextFactory.js",
   "scripts": {
-    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --runInBand"
+    "test": "node --use-openssl-ca --experimental-vm-modules node_modules/jest/bin/jest.js --runInBand"
   },
   "browser": {
     "fs": false
@@ -16,7 +15,7 @@
     "src"
   ],
   "dependencies": {
-    "@ilb/node_ldap": "^1.0.17",
+    "@ilb/node_ldap": "^1.1.0",
     "xml2js": "^0.4.23"
   },
   "devDependencies": {
