--- a/test/ldap.conf
+++ b/test/ldap.conf
@@ -5,10 +5,10 @@
 # See ldap.conf(5) for details
 # This file should be world readable but not world writable.
 
-BASE	c=ru
-URI ldapi:/// ldaps://devel.net.ilb.ru ldaps://ldap.net.ilb.ru ldaps://ldap2.net.ilb.ru
+BASE	dc=iconicompany,dc=com
+URI ldapi:/// ldap://localhost:1389
 
-TLS_CACERT /etc/ssl/certs/ourCAbundle.crt
+#TLS_CACERT test/openldap/certs/ca.crt
 
 #SIZELIMIT	12
 #TIMELIMIT	15
