--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "ISC",
   "main": "src/ContextFactory.js",
   "scripts": {
-    "test": "node --use-openssl-ca --experimental-vm-modules node_modules/jest/bin/jest.js --runInBand"
+    "test": "node --use-openssl-ca --experimental-vm-modules node_modules/jest/bin/jest.js --runInBand --detectOpenHandles"
   },
   "browser": {
     "fs": false
