--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "fs": false
   },
   "files": [
-    "src"
+    "src",
+    "config.js"
   ],
   "dependencies": {
     "@ilb/node_ldap": "1.1.1",
