--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ilb/node_context",
+  "name": "icontext",
   "version": "1.1.2",
   "description": "",
   "author": "github@iconicompany.com",
@@ -16,7 +16,7 @@
     "config.js"
   ],
   "dependencies": {
-    "@ilb/node_ldap": "1.1.1",
+    "ildap": "1.1.1",
     "xml2js": "^0.4.23"
   },
   "devDependencies": {
