--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,6 @@
   "files.eol": "\n",
   "jest.jestCommandLine": "NODE_OPTIONS=--experimental-vm-modules npx jest",
   "editor.codeActionsOnSave": {
-    "source.fixAll.eslint": "explicit"
+    "source.fixAll.eslint": true
   }
 }
